syntax = "proto3";

package class_schedule_service;

message Attendance {
  int64 class_id = 1;
  string user_uid = 2;
  int32 value = 3;
}